--- a/About.html
+++ b/About.html
@@ -39,10 +39,10 @@
                 <div class="ps-3 navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a href="./index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
+                            <a href="./Index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./about.html" class="nav-link text-secondary">Sobre</a>
+                            <a href="./About.html" class="nav-link text-secondary">Sobre</a>
                         </li>
                     </ul>
                 </div>
