--- a/Detalhes.html
+++ b/Detalhes.html
@@ -39,10 +39,10 @@
                 <div class="ps-3 navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a href="./index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
+                            <a href="./Index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./about.html" class="nav-link text-secondary">Sobre</a>
+                            <a href="./About.html" class="nav-link text-secondary">Sobre</a>
                         </li>
                     </ul>
                 </div>
@@ -97,13 +97,13 @@
                     </dt>
                 </dl>
                 <div class="w-100 d-flex justify-content-between">
-                    <a href="./index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
+                    <a href="./Index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
                             class="fa-solid fa-left-long fa-lg me-2"></i> Voltar</a>
 
                     <!-- <button class="btn btn-secondary fw-bold shadow-sm" id="submit-input">
                         <i class="fa-solid fa-file-pen fa-lg me-2"></i> Editar
                     </button> -->
-                    <a href="./editar.html" class="btn btn-secondary fw-bold shadow-sm" formaccion="./Editar.html"><i
+                    <a href="./Editar.html" class="btn btn-secondary fw-bold shadow-sm" formaccion="./Editar.html"><i
                             class="fa-solid fa-file-pen fa-lg me-2"></i> Editar</a>
                 </div>
         </main>
