--- a/Editar.html
+++ b/Editar.html
@@ -39,10 +39,10 @@
                 <div class="ps-3 navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a href="./index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
+                            <a href="./Index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./about.html" class="nav-link text-secondary">Sobre</a>
+                            <a href="./About.html" class="nav-link text-secondary">Sobre</a>
                         </li>
                     </ul>
                 </div>
@@ -90,7 +90,7 @@
                             </select>
                         </div>
                         <div class="form-group mb-2 d-flex align-items-center justify-content-between">
-                            <a href="./index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
+                            <a href="./Index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
                                     class="fa-solid fa-left-long fa-lg me-2"></i> Voltar</a>
                             <button type="button" class="btn btn-secondary fw-bold" id="submit-input"><i
                                     class="fa-solid fa-check me-2"></i> Aplicar</button>
