--- a/Index.html
+++ b/Index.html
@@ -39,10 +39,10 @@
                 <div class="ps-3 navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a href="./index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
+                            <a href="./Index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./about.html" class="nav-link text-secondary">Sobre</a>
+                            <a href="./About.html" class="nav-link text-secondary">Sobre</a>
                         </li>
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
 
             <div class="container overflow-auto container-max bg-light rounded-2 shadow p-3">
                 <div class="d-flex py-2 justify-content-center rounded-2 bg-white shadow-sm mb-2">
-                    <a href="./criar.html"
+                    <a href="./Criar.html"
                         class="text-decoration-none me-2 btn btn-menu hover bg-info rounded-2 shadow-sm d-flex text-light"
                         data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Nova Tarefa">
                         <i class="m-auto fa-solid fa-file-circle-plus fa-xl"></i>
