--- a/Criar.html
+++ b/Criar.html
@@ -39,7 +39,7 @@
                 <div class="ps-3 navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a href="./Index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
+                            <a href="./index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
                         </li>
                         <li class="nav-item">
                             <a href="./about.html" class="nav-link text-secondary">Sobre</a>
@@ -92,9 +92,9 @@
                                 <option value="2">Finalizado</option>
                             </select>
                         </div>
-                        <!-- formaction="./Index.html" -->
+                        <!-- formaction="./index.html" -->
                         <div class="form-group mb-2 d-flex align-items-center justify-content-between">
-                            <a href="./Index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
+                            <a href="./index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
                                     class="fa-solid fa-left-long fa-lg me-2"></i> Voltar</a>
                             <button type="button" id="submit-input" class="btn btn-secondary fw-bold"><i
                                     class="fa-solid fa-check me-2"></i>
