--- a/Deletar.html
+++ b/Deletar.html
@@ -39,10 +39,10 @@
                 <div class="ps-3 navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a href="./Index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
+                            <a href="./index.html" class="nav-link text-secondary">Agenda de Tarefas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./About.html" class="nav-link text-secondary">Sobre</a>
+                            <a href="./about.html" class="nav-link text-secondary">Sobre</a>
                         </li>
                     </ul>
                 </div>
@@ -101,10 +101,10 @@
                     </dt>
                 </dl>
                 <div class="w-100 d-flex justify-content-between">
-                    <a href="./Index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
+                    <a href="./index.html" class="btn btn-outline-dark fw-bold shadow-sm"><i
                             class="fa-solid fa-left-long fa-lg me-2"></i> Voltar</a>
 
-                    <!-- <a href="./Index.html" class="btn btn-danger fw-bold shadow-sm"><i
+                    <!-- <a href="./index.html" class="btn btn-danger fw-bold shadow-sm"><i
                             class="fa-solid fa-trash fa-lg me-2"></i> Deletar</a> -->
 
                     <button type="button" class="btn btn-danger fw-bold shadow-sm" id="submit-input">
